# open-ai-API

./: .gitignore  README.md  chatgpt.py  pyproject.toml
data/: data.txt
