[tool.poetry]
name = "test-open-Ai"
version = "0.1.0"
description = ""
authors = ["Evgenii Smirnov <jekka9803@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
langchain = "^0.0.308"
chromadb = "^0.4.4"
tiktoken = "^0.4.0"
unstructured = "^0.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
